--- a/.travis.yml
+++ b/.travis.yml
@@ -4,5 +4,5 @@ os:
 language: c
 compiler: gcc
 script:
-  - git clone git@github.com:yyang42/moulitest.git ../moulitest
+  - git clone --depth=50 --branch=master https://github.com/juschaef/moulitest.git ../moulitest
   - make check
