--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ language: c
 compiler: gcc
 before_script:
   - cd ..
-  - git clone git@github.com:juschaef/libtowel.git
+  - git clone git@github.com:juschaef/moulitest.git
 
 script:
   - make check
