--- a/.travis.yml
+++ b/.travis.yml
@@ -4,8 +4,7 @@ os:
 language: c
 compiler: gcc
 before_script:
-  - cd ..
-  - git clone https://github.com/yyang42/moulitest.git
+  - cd .. && git clone https://github.com/yyang42/moulitest.git
 
 script:
   - make check
