--- a/.travis.yml
+++ b/.travis.yml
@@ -4,9 +4,12 @@ os:
 language: c
 compiler: gcc
 before_script:
+  - pwd
+  - ls
   - cd .. && git clone https://github.com/yyang42/moulitest.git
 
 script:
   - pwd
   - ls
+  - cd libtowel
   - make check
