--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,10 @@ before_script:
   - git clone https://github.com/yyang42/moulitest.git ../moulitest
 
 before install:
-  - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then export FILTER_PATTERN='-v _noci'        ; fi
+  - if [ "$TRAVIS_OS_NAME" == "linux" ]; then
+        export FILTER_PATTERN='-v _noci';
+    fi
 
 script:
+  - echo $FILTER_PATTERN
   - make check $FILTER_PATTERN
